--- a/tinybert_merged_dataset/requirements.txt
+++ b/tinybert_merged_dataset/requirements.txt
@@ -65,7 +65,7 @@ nbconvert==6.3.0
 nbformat==5.1.3
 nest-asyncio==1.5.1
 notebook==6.4.6
-numpy==1.21.4
+numpy==1.22.3
 oauthlib==3.1.1
 packaging==21.3
 pandas==1.3.4
@@ -75,6 +75,7 @@ pathtools==0.1.2
 pexpect==4.8.0
 pickleshare==0.7.5
 Pillow==8.4.0
+pkg_resources==0.0.0
 prometheus-client==0.12.0
 promise==2.3
 prompt-toolkit==3.0.22
@@ -134,7 +135,7 @@ tornado==6.1
 tqdm==4.62.3
 traitlets==5.1.1
 transformers==4.12.5
-typing-extensions==4.0.0
+typing_extensions==4.2.0
 tzdata==2021.5
 tzlocal==4.1
 urllib3==1.26.7
